...
  if (!permission.granted) {
    return <Text>Brak dostępu do kamery. Proszę włączyć uprawnienia.</Text>;
  }

  return (
    <View style={styles.container}>
      <Text style={styles.header}>Zeskanuj kod QR</Text>
      <CameraView
        style={styles.camera}
        facing="back"
        onBarcodeScanned={scanned ? undefined : handleBarCodeScanned}
      />

...
