...
      Alert.alert("Błąd", `Wystąpił błąd: ${error.message}`);
    }
  };

  return (
    <View style={styles.container}>
      <Text style={styles.title}>Formularz rezerwacji</Text>
      <TextInput
        style={styles.input}
        placeholder="Imię"
        placeholderTextColor="#999"
        value={name}
        onChangeText={setName}
...
