appId: com.s23884.OpenSpace

name: Uruchomienie ekranu skanera
---
- launchApp
- assertVisible: "Logowanie"
- tapOn: "Wpisz email"
- inputText: "test1@gmail.com"
- tapOn: "Wpisz hasło"
- inputText: "test1@gmail.com"
- tapOn:
    text: ".*Zaloguj.*"
- assertVisible: "Witaj w OpenSpace!"

- tapOn: "📷 SKANUJ"
- assertVisible: "Zeskanuj kod QR"
