appId: com.s23884.OpenSpace

name: Wyświetlanie rezerwacji użytkownika
---
- launchApp
- tapOn: "Wpisz email"
- inputText: "test1@gmail.com"
- tapOn: "Wpisz hasło"
- inputText: "test1@gmail.com"
- tapOn:
    text: ".*Zaloguj.*"
- assertVisible: "Witaj w OpenSpace!"

- tapOn: "📅 MOJE REZERWACJE"
- assertVisible: "Moje rezerwacje"
